--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,20 +75,19 @@ conduit-router = "0.8"
 conduit-static = "0.8"
 conduit-git-http-backend = "0.8"
 civet = "0.9"
-conduit-hyper = "0.1.3"
+conduit-hyper = { path = "../../jtgeibel/conduit-hyper" }
 
-futures = "0.1"
-tokio = "0.1"
-hyper = "0.12"
+futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
+tokio = { git = "https://github.com/tokio-rs/tokio", default-features = false, features = ["tcp"]}
+hyper = { git = "https://github.com/hyperium/hyper" }
 ctrlc = { version = "3.0", features = ["termination"] }
 indexmap = "1.0.2"
 handlebars = "2.0.1"
 
 [dev-dependencies]
 conduit-test = "0.8"
-hyper-tls = "0.3"
+hyper-tls = { path = "../../hyperium/hyper-tls" }
 lazy_static = "1.0"
-tokio-core = "0.1"
 diesel_migrations = { version = "1.3.0", features = ["postgres"] }
 
 [build-dependencies]
