--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,8 +77,9 @@ conduit-git-http-backend = "0.8"
 civet = "0.9"
 conduit-hyper = { path = "../../jtgeibel/conduit-hyper" }
 
-futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
-tokio = { version = "0.2.0-alpha.1", default-features = false, features = ["tcp"]}
+futures-preview = { version = "0.3.0-alpha.17", features = ["compat", "async-await", "nightly"] }
+tokio = { version = "0.2.0-alpha.1", default-features = false, features = ["tcp", "fs"]}
+tokio-signal = "0.3.0-alpha.1"
 hyper = { git = "https://github.com/hyperium/hyper" }
 ctrlc = { version = "3.0", features = ["termination"] }
 indexmap = "1.0.2"
