--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,17 +80,17 @@ conduit-hyper = { git = "https://github.com/jtgeibel/conduit-hyper", branch="asy
 futures-preview = { version = "0.3.0-alpha.19", features = ["compat", "async-await"] }
 tokio = { version = "0.2.0-alpha.2", default-features = false, features = ["tcp", "fs"]}
 tokio-net = { version = "0.2.0-alpha.2", default-features=false, features = ["signal"] }
-hyper = { git = "https://github.com/hyperium/hyper" }
+hyper = "0.13.0-alpha.4"
 ctrlc = { version = "3.0", features = ["termination"] }
 indexmap = "1.0.2"
 handlebars = "2.0.1"
 
 [dev-dependencies]
 conduit-test = "0.8"
-hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
+hyper-tls = "0.4.0-alpha.4"
 lazy_static = "1.0"
 diesel_migrations = { version = "1.3.0", features = ["postgres"] }
-tower-service = "0.3.0-alpha.1"
+tower-service = "0.3.0-alpha.2"
 
 [build-dependencies]
 dotenv = "0.15"
