--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: rust
-sudo: required
-dist: xenial
+dist: bionic
 
 branches:
   only:
@@ -18,23 +17,20 @@ env:
   global:
     - RUST_BACKTRACE=1
     - JOBS=1 # See https://git.io/vdao3 for details.
-    - DATABASE_URL=postgres://postgres:@localhost/cargo_registry_test
-    - TEST_DATABASE_URL=postgres://postgres:@localhost/cargo_registry_test
+    - DATABASE_URL=postgres:///cargo_registry_test
+    - TEST_DATABASE_URL=postgres:///cargo_registry_test
     - CARGO_INCREMENTAL=0
     # Percy secrets are included here to enable Percy's GitHub integration
     # on community-submitted PRs
     - PERCY_TOKEN=0d8707a02b19aebbec79bb0bf302b8d2fa95edb33169cfe41b084289596670b1
     - PERCY_PROJECT=crates-io/crates.io
-    - PGPORT=5433
     - PATH=$HOME/.cargo/bin:$PATH
     - RUSTFLAGS="-C debuginfo=0 -D warnings"
     - MALLOC_CONF=background_thread:true,abort_conf:true,abort:true,junk:true
 
 install:
-  - sudo cp /etc/postgresql/10/main/pg_hba.conf /etc/postgresql/11/main/pg_hba.conf
-  - sudo systemctl restart postgresql@11-main
   - script/ci/cargo-clean-on-new-rustc-version.sh
-  - which diesel || cargo install diesel_cli --vers `cat .diesel_version` --no-default-features --features postgres
+  - which diesel || cargo install diesel_cli --vers `cat .diesel_version` --no-default-features --features postgres --debug
 
 before_script:
   - diesel database setup --locked-schema
