--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - DATABASE_URL=postgres://postgres:@localhost/cargo_registry_test
     - TEST_DATABASE_URL=postgres://postgres:@localhost/cargo_registry_test
     - CARGO_TARGET_DIR=target
+    - CARGO_INCREMENTAL=0
     - PERCY_PARALLEL_TOTAL=2
     # Percy secrets are included here to enable Percy's GitHub integration
     # on community-submitted PRs
