--- a/src/tasks/dump_db/dump-db.toml
+++ b/src/tasks/dump_db/dump-db.toml
@@ -66,7 +66,7 @@ owner_id = "public"
 created_at = "public"
 created_by = "private"
 deleted = "private"
-updated_at = "public"
+updated_at = "private"
 owner_kind = "public"
 email_notifications = "private"
 
