migrate from ember-cli-qunit to ember-qunit

--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "ember-cli-meta-tags": "^5.3.0",
     "ember-cli-mirage": "^0.4.7",
     "ember-cli-moment-shim": "^3.5.0",
-    "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "2.1.1",
     "ember-cli-uglify": "^2.0.0",
@@ -67,6 +66,7 @@
     "ember-percy": "^1.4.0",
     "ember-prism": "^0.5.0",
     "ember-promise-helpers": "^1.0.9",
+    "ember-qunit": "^4.6.0",
     "ember-resolver": "^4.1.0",
     "ember-router-scroll": "^0.4.0",
     "ember-template-lint": "^1.12.1",
