Add `-D warnings` to `RUSTFLAGS` on CI
By denying warnings explicitly on CI, we don't need to deny warnings in
library or binary.  `#![warn(clippy::all)]` is used to automatically
enable clippy in RLS enabled IDEs.  `rust_2018_idioms` is now applied
consistently.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     - PERCY_PROJECT=crates-io/crates.io
     - PGPORT=5433
     - PATH=$HOME/.cargo/bin:$PATH
-    - RUSTFLAGS="-C debuginfo=0"
+    - RUSTFLAGS="-C debuginfo=0 -D warnings"
 
 install:
   - sudo cp /etc/postgresql/10/main/pg_hba.conf /etc/postgresql/11/main/pg_hba.conf
