chore(github-actions): add bors workaround flag status
Reference: https://github.com/rust-lang/crater/blob/a1930d2acd71382b66ce68d9e45ce57f350fae1a/.github/workflows/bors.yml#L125-L149

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,3 +190,30 @@ jobs:
 
       - name: Prune unnecessary cache
         run: script/ci/prune-cache.sh
+
+
+  # These jobs doesn't actually test anything, but they're only used to tell
+  # bors the build completed, as there is no practical way to detect when a
+  # workflow is successful listening to webhooks only.
+  #
+  # ALL THE PREVIOUS JOBS NEEDS TO BE ADDED TO THE `needs` SECTION OF THIS JOB!
+
+  end-success:
+    name: bors build finished
+    if: success()
+    runs-on: ubuntu-latest
+    needs: [frontend, backend]
+
+    steps:
+      - name: Mark the job as successful
+        run: exit 0
+
+  end-failure:
+    name: bors build finished
+    if: "!success()"
+    runs-on: ubuntu-latest
+    needs: [frontend, backend]
+
+    steps:
+      - name: Mark the job as a failure
+        run: exit 1
