--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "2.1.1",
-    "ember-cli-template-lint": "^0.7.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-component-attributes": "^0.1.1",
     "ember-concurrency": "^0.8.19",
@@ -70,6 +69,7 @@
     "ember-promise-helpers": "^1.0.9",
     "ember-resolver": "^4.1.0",
     "ember-router-scroll": "^0.4.0",
+    "ember-template-lint": "^1.12.1",
     "ember-source": "~3.1.0",
     "ember-svg-jar": "^1.1.1",
     "ember-test-selectors": "^0.3.7",
