Replace deprecated `ember-cli-qunit` with `ember-qunit`

--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "ember-cli-meta-tags": "^5.3.0",
     "ember-cli-mirage": "^0.4.7",
     "ember-cli-moment-shim": "^3.5.0",
-    "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "2.1.1",
     "ember-cli-uglify": "^2.0.0",
@@ -63,6 +62,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.5.0",
+    "ember-qunit": "^4.6.0",
     "ember-page-title": "^4.0.5",
     "ember-percy": "^1.4.0",
     "ember-prism": "^0.5.0",
