--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ ammonia = "3.0.0"
 docopt = "1.0"
 scheduled-thread-pool = "0.2.0"
 derive_deref = "1.0.0"
-reqwest = { version = "0.10.0-alpha.1", features = ["blocking", "gzip", "json"] }
+reqwest = { git = "https://github.com/seanmonstar/reqwest/", features = ["blocking", "gzip", "json"] }
 tempdir = "0.3.7"
 parking_lot = "0.7.1"
 jemallocator = { version = "0.3", features = ['unprefixed_malloc_on_supported_platforms', 'profiling'] }
@@ -75,22 +75,22 @@ conduit-router = "0.8"
 conduit-static = "0.8"
 conduit-git-http-backend = "0.8"
 civet = "0.9"
-conduit-hyper = "0.2.0-alpha.1"
+conduit-hyper = "0.2.0-alpha.3"
 
-futures-preview = { version = "0.3.0-alpha.19", features = ["compat", "async-await"] }
-tokio = { version = "0.2.0-alpha.2", default-features = false, features = ["tcp", "fs"]}
-tokio-net = { version = "0.2.0-alpha.2", default-features=false, features = ["signal"] }
-hyper = "0.13.0-alpha.4"
+futures = "0.3"
+tokio = { version = "0.2", default-features = false, features = ["net", "signal", "io-std"]}
+hyper = "0.13"
 ctrlc = { version = "3.0", features = ["termination"] }
 indexmap = "1.0.2"
 handlebars = "2.0.1"
 
 [dev-dependencies]
 conduit-test = "0.8"
-hyper-tls = "0.4.0-alpha.4"
+hyper-tls = "0.4"
 lazy_static = "1.0"
 diesel_migrations = { version = "1.3.0", features = ["postgres"] }
 tower-service = "0.3.0-alpha.2"
+tokio = { version = "0.2", default-features = false, features = ["stream"]}
 
 [build-dependencies]
 dotenv = "0.15"
