--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-a11y-testing": "^0.5.0",
+    "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.12.0",
     "ember-cli-app-version": "^3.1.3",
     "ember-cli-babel": "^6.14.1",
