--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,15 @@ edition = "2018"
 
 [dependencies]
 conduit = "0.8"
-futures-preview = "0.3.0-alpha.19"
-hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
-http = "0.1"
+futures = "0.3"
+hyper = "0.13"
+http = "0.2"
 tracing = { version = "0.1", features = ["log"] }
 semver = "0.5" # Must match version in conduit for now
-tokio-executor = { version = "0.2.0-alpha.6", features = ["threadpool"] }
-tower-service = "0.3.0-alpha.2"
+tokio = { version = "0.2", features = ["blocking", "rt-threaded"] }
+tower-service = "0.3"
 
 [dev-dependencies]
 conduit-router = "0.8"
-env_logger = "0.6"
-tokio = { version = "0.2.0-alpha.2", default-features = false, features = ["rt-full"] }
+env_logger = "0.7"
+tokio = { version = "0.2", features = ["macros"] }
