--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-ember": "^7.7.2",
     "eslint-plugin-prettier": "^3.1.0",
+    "faker": "^4.1.0",
     "loader.js": "^4.5.1",
     "normalize.css": "^7.0.0",
     "nyc": "^14.1.1",
