--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: rust
 sudo: required
 dist: xenial
 
+branches:
+  only:
+  - auto
+  - try
+  - master
+
 cache:
   cargo: true
   directories:
