Try out percy ember 2.0.0-beta.2

--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "start:live": "./script/ember.sh serve --proxy https://crates.io",
     "start:local": "./script/ember.sh serve --proxy http://127.0.0.1:8888",
     "start:staging": "./script/ember.sh serve --proxy https://staging-crates-io.herokuapp.com",
-    "test": "ember exam --split=2 --parallel",
+    "test": "percy exec -- ember exam --split=2 --parallel",
     "test-coverage": "COVERAGE=true npm run test && ember coverage-merge && rm -rf coverage_* coverage/coverage-summary.json && nyc report"
   },
   "devDependencies": {
     "@ember/jquery": "^1.1.0",
+    "@percy/ember": "github:percy/ember-percy",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-a11y-testing": "^2.0.0",
@@ -61,11 +62,10 @@
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^8.0.0",
-    "ember-qunit": "^4.6.0",
     "ember-page-title": "^5.1.0",
-    "ember-percy": "^1.6.0",
     "ember-prism": "^0.5.0",
     "ember-promise-helpers": "^1.0.9",
+    "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
     "ember-router-scroll": "^1.3.3",
     "ember-template-lint": "^1.12.1",
