Comment out cache for `~/.cargo/git/db` until git deps are used

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,14 +71,16 @@ jobs:
             ${{ runner.os }}-cargo-registry-index-${{ github.ref }}-
             ${{ runner.os }}-cargo-registry-index-refs/heads/master-
 
-      - name: Cache cargo git db
-        uses: actions/cache@v1
-        with:
-          path: ~/.cargo/git/db
-          key: ${{ runner.os }}-cargo-git-db-${{ github.ref }}-${{ hashFiles('**/Cargo.toml') }}
-          restore-key: |
-            ${{ runner.os }}-cargo-git-db-${{ github.ref }}-
-            ${{ runner.os }}-cargo-git-db-refs/heads/master-
+      # Uncomment the following if a git dependency is added to `Cargo.toml`
+      #- name: Cache cargo git db
+      #  uses: actions/cache@v1
+      #  with:
+      #    path: ~/.cargo/git/db
+      #    key: ${{ runner.os }}-cargo-git-db-${{ github.ref }}-${{ hashFiles('**/Cargo.toml') }}
+      #    restore-key: |
+      #      ${{ runner.os }}-cargo-git-db-${{ github.ref }}-
+      #      ${{ runner.os }}-cargo-git-db-refs/heads/master-${{ hashFiles('**/Cargo.toml') }}
+      #      ${{ runner.os }}-cargo-git-db-refs/heads/master-
 
       - name: Cache cargo build
         uses: actions/cache@v1
