--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,12 +96,12 @@ jobs:
       # channel this is too frequent and for the nightly channel (and probably beta as well) it is
       # not often enough.
 
-      # Current size as of 2019-12-23: ~1 MB
-      - name: Cache diesel binary
+      # Current size as of 2019-12-23: ~6 MB
+      - name: Cache cargo binaries
         uses: actions/cache@v1
         with:
-          path: ~/.cargo/bin/diesel
-          key: ${{ runner.os }}-diesel-bin-${{ matrix.rust }}-${{ hashFiles('.diesel_version') }}
+          path: ~/.cargo/bin
+          key: ${{ runner.os }}-cargo-bin-${{ matrix.rust }}-${{ hashFiles('.diesel_version') }}
 
       # Current size as of 2019-12-23: ~77 MB
       - name: Cache cargo registry cache
