--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ember-svg-jar": "^2.2.3",
     "ember-test-selectors": "^3.0.0",
     "ember-web-app": "^3.0.1",
+    "ember-window-mock": "^0.5.4",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-ember": "^7.7.2",
