--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ember-keyboard": "^5.0.0",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-modifier": "^1.0.2",
     "ember-moment": "^8.0.0",
     "ember-qunit": "^4.6.0",
     "ember-page-title": "^5.1.0",
