--- a/src/tasks/dump_db/dump-db.toml
+++ b/src/tasks/dump_db/dump-db.toml
@@ -56,6 +56,8 @@ invited_user_id = "private"
 invited_by_user_id = "private"
 crate_id = "private"
 created_at = "private"
+token = "private"
+token_generated_at = "private"
 
 [crate_owners]
 dependencies = ["crates", "users"]
