--- a/src/boot/categories.toml
+++ b/src/boot/categories.toml
@@ -80,6 +80,12 @@ description = """
 Algorithms for making data smaller.\
 """
 
+[computer-vision]
+name = "Computer Vision"
+description = """
+Crates for comprehending the world from video or images.\
+"""
+
 [config]
 name = "Configuration"
 description = """
