--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "ember-cli-sri": "2.1.1",
     "ember-cli-uglify": "^3.0.0",
     "ember-concurrency": "^1.1.3",
+    "ember-css-modules": "^1.3.0-beta.1",
+    "ember-css-modules-sass": "^1.0.1",
     "ember-data": "~3.15.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-exam": "^4.0.9",
