correct capitalization of v in Computer vision

--- a/src/boot/categories.toml
+++ b/src/boot/categories.toml
@@ -81,7 +81,7 @@ Algorithms for making data smaller.\
 """
 
 [computer-vision]
-name = "Computer Vision"
+name = "Computer vision"
 description = """
 Crates for comprehending the world from video or images.\
 """
