fix: Refactor tests after rebase
- Faker in model the best way to generate random values for better
testing.
- Remove check by classes because css module generate random class
name now and there no good ways how to use that names in tests.
- Refactor some asserts to check real value instead of custom one.

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-ember": "^7.7.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "faker": "^4.1.0",
     "loader.js": "^4.7.0",
     "normalize.css": "^8.0.1",
     "nyc": "^15.0.0",
