Expose `crate_owners.created_by`

--- a/src/tasks/dump_db/dump-db.toml
+++ b/src/tasks/dump_db/dump-db.toml
@@ -66,7 +66,7 @@ filter = "NOT deleted"
 crate_id = "public"
 owner_id = "public"
 created_at = "public"
-created_by = "private"
+created_by = "public"
 deleted = "private"
 updated_at = "private"
 owner_kind = "public"
