Add a partitioned version of the `version_downloads` table
⚠️  this commit is part of a PR containing destructive commits, which
must be deployed separately with steps in between. Do not deploy this
commit with other commits, and make sure you read the instructions
below.⚠️

This adds the partitioned version of the table, a trigger adds new data
to the new table, and a binary is responsible for backfilling the old
data.

The `processed` column is notably missing. This is for two reasons. The
first is that we can't partition on a boolean column, so any queries
that were focused on `processed` will need some date filter to be
performant on the new table.

The second is that while the query planner prunes unused partitions for
selects, it does not appear to do so for updates. This caused the query
which set `processed = 't'` to perform unreasonably slow against the
partitioned table. This might be fixed in PG 12, which I didn't test
against. We could also update the most recent partition directly, which
would fix the issue. But ultimately the `processed` column only really
existed so `update-downloads` could go an unlimited amount of time
without running and still recover. Realistically that's just not going
to happen, and with a sufficiently large margin (say 1 week), if we
really go that long without realizing that this is broken, we have much
bigger failures to worry about. Either way we need some date filter on
these queries to be performant. So while I think that's a good move even
in a vacuum, `processed` just stops having a purpose.

The trigger is pretty standard. I added the `IF NEW IS DISTINCT FROM
OLD`, since I think we might keep the non-partitioned table around for a
bit after the transition, which means we'll want a trigger updating that
table. The reason we'd ever need both is a bit dense for this commit
(I'm happy to go into detail about caveats of atomic swaps in PG if
anyone has strong concerns here), but the short version is that for at
least a short

--- a/diesel.toml
+++ b/diesel.toml
@@ -5,3 +5,23 @@ file = "src/schema.rs"
 with_docs = true
 import_types = ["diesel::sql_types::*", "diesel_full_text_search::{TsVector as Tsvector}"]
 patch_file = "src/schema.patch"
+
+[print_schema.filter]
+except_tables = [
+  "version_downloads_default",
+  "version_downloads_pre_2017",
+  "version_downloads_2017",
+  "version_downloads_2018_q1",
+  "version_downloads_2018_q2",
+  "version_downloads_2018_q3",
+  "version_downloads_2018_q4",
+  "version_downloads_2019_q1",
+  "version_downloads_2019_q2",
+  "version_downloads_2019_q3",
+  "version_downloads_2019_q4",
+  "version_downloads_2020_q1",
+  "version_downloads_2020_q2",
+  "version_downloads_2020_q3",
+  "version_downloads_2020_q4",
+  "version_downloads_2021_q1",
+]
