Swap `version_downloads` with the partitioned table
Note that as of this commit, the DB dump is broken, as it can't handle
partitioned tables. We're keeping the old table around in case we need
to revert this, though for the time being I'm just assuming we'll either
manually reconcile data or accept some loss of download counts if we
need to revert.

For some reason Diesel CLI isn't picking up the foreign key on the
partitioned table, so I regenerated the patch file

Deployment Instructions
=======================

This commit contains a destructive migration, and should be deployed on
its own

--- a/diesel.toml
+++ b/diesel.toml
@@ -8,6 +8,7 @@ patch_file = "src/schema.patch"
 
 [print_schema.filter]
 except_tables = [
+  "version_downloads_archive",
   "version_downloads_default",
   "version_downloads_pre_2017",
   "version_downloads_2017",
