--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 
 name = "conduit-router"
-version = "0.8.0"
+version = "0.9.0-alpha.0"
 authors = ["wycats@gmail.com"]
 license = "MIT"
 description = "Router middleware for conduit based on route-recognizer"
 repository = "https://github.com/conduit-rust/conduit-router"
 
 [dependencies]
-conduit = "0.8"
+conduit = "0.9.0-alpha.0"
 route-recognizer = "0.1.0"
-semver = "0.5.0"
+semver = "0.9.0"
