--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "conduit-middleware"
-version = "0.8.1"
+version = "0.9.0-alpha.0"
 authors = ["wycats@gmail.com",
            "Alex Crichton <alex@alexcrichton.com>"]
 description = "HTTP Middleware interface using the conduit interface"
@@ -9,5 +9,5 @@ repository = "https://github.com/conduit-rust/conduit-middleware"
 license = "MIT"
 
 [dependencies]
-conduit = "0.8"
-semver = "0.5.0"
+conduit = "0.9.0-alpha.0"
+semver = "0.9"
