--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "2.1.1",
     "ember-cli-uglify": "^3.0.0",
+    "ember-click-outside": "^1.3.0",
     "ember-concurrency": "^1.1.5",
     "ember-css-modules": "^1.3.0-beta.1",
     "ember-css-modules-sass": "^1.0.1",
