--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "conduit"
-version = "0.9.0-alpha.0"
+version = "0.9.0-alpha.1"
 authors = ["wycats@gmail.com",
            "Alex Crichton <alex@alexcrichton.com>"]
 description = "Common HTTP server interface"
@@ -9,4 +9,4 @@ license = "MIT"
 repository = "https://github.com/conduit-rust/conduit"
 
 [dependencies]
-semver = "0.9.0"
+http = "0.2"
