--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.0.1"
 authors = ["Example User <mail@example.com>"]
 
 [dependencies]
-civet = "0.8"
-conduit = "0.7"
-conduit-router = "0.7"
+civet = "0.12.0-alpha.2"
+conduit = "0.9.0-alpha.1"
+conduit-router = "0.9.0-alpha.1"
