--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 
 name = "conduit-router"
-version = "0.9.0-alpha.1"
+version = "0.9.0-alpha.2"
 authors = ["wycats@gmail.com"]
 license = "MIT"
 description = "Router middleware for conduit based on route-recognizer"
 repository = "https://github.com/conduit-rust/conduit-router"
 
 [dependencies]
-conduit = "0.9.0-alpha.1"
+conduit = { git = "https://github.com/jtgeibel/conduit", rev = "0deff5b" } # "0.9.0-alpha.2"
 route-recognizer = "0.1.0"
+
+[dev-dependencies]
+conduit-test = { git = "https://github.com/jtgeibel/conduit-test", rev = "b71595f" } # "0.9.0-alpha.2"
