--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["wycats@gmail.com",
 description = "HTTP Middleware interface using the conduit interface"
 repository = "https://github.com/conduit-rust/conduit-middleware"
 license = "MIT"
+edition = "2018"
 
 [dependencies]
 conduit = { git = "https://github.com/jtgeibel/conduit", rev = "0deff5b" } # "0.9.0-alpha.2"
