--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ description = "Router middleware for conduit based on route-recognizer"
 repository = "https://github.com/conduit-rust/conduit-router"
 
 [dependencies]
-conduit = { git = "https://github.com/jtgeibel/conduit", rev = "0deff5b" } # "0.9.0-alpha.2"
+conduit = "0.9.0-alpha.2"
 route-recognizer = "0.1.0"
 
 [dev-dependencies]
-conduit-test = { git = "https://github.com/jtgeibel/conduit-test", rev = "b71595f" } # "0.9.0-alpha.2"
+conduit-test = "0.9.0-alpha.2"
