--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ repository = "https://github.com/conduit-rust/conduit-static"
 license = "MIT"
 
 [dependencies]
-conduit = { git = "https://github.com/jtgeibel/conduit", rev = "0deff5b" } # "0.9.0-alpha.2"
+conduit = "0.9.0-alpha.2"
 conduit-mime-types = "0.7"
 time = "0.1"
 filetime = "0.2"
 
 [dev-dependencies]
-civet = { git = "https://github.com/jtgeibel/rust-civet", rev = "1c145ce" } # "0.12.0-alpha.3"
-conduit-test = { git = "https://github.com/jtgeibel/conduit-test", rev = "b71595f" } # "0.9.0-alpha.2"
+civet = "0.12.0-alpha.3"
+conduit-test = "0.9.0-alpha.2"
 tempdir = "0.3"
