--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ the response is fresh.
 """
 
 [dependencies]
-conduit = { git = "https://github.com/jtgeibel/conduit", rev = "0deff5b" } # "0.9.0-alpha.2"
-conduit-middleware ={ git = "https://github.com/jtgeibel/conduit-middleware", rev = "0f3aa38" } # "0.9.0-alpha.2"
+conduit = "0.9.0-alpha.2"
+conduit-middleware = "0.9.0-alpha.2"
 time = "0.1.0"
 
 [dev-dependencies]
-conduit-test =  { git = "https://github.com/jtgeibel/conduit-test", rev = "b71595f" } # "0.9.0-alpha.2"
+conduit-test = "0.9.0-alpha.2"
