--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "broccoli-asset-rev": "^3.0.0",
@@ -106,5 +108,8 @@
   "engines": {
     "node": "^12.9.1",
     "npm": "^6.10.2"
+  },
+  "ember": {
+    "edition": "octane"
   }
 }
