Add `postcss-nested` plugin

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "loader.js": "^4.7.0",
     "normalize.css": "^8.0.1",
     "nyc": "^15.0.0",
+    "postcss-nested": "^4.2.1",
     "prettier": "^2.0.2",
     "qunit-console-grouper": "^0.2.0",
     "qunit-dom": "^1.1.0",
