package.json: Adjust `build` script to build production assets
see https://github.com/ember-cli/ember-new-output/blob/v3.16.1/package.json#L14

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
     "lint:deps": "ember dependency-lint",
     "lint:hbs": "ember-template-lint app/templates",
     "lint:js": "eslint . --cache",
