Fix serving `/git/index` during local development
The "index checkout" directory is used to initialize the bare index repo
but is not kept in sync after that. It seems unnecessary to require all
environments to define the `GIT_REPO_CHECKOUT` variable, so it is
dropped as well.

During local development, the `tmp/index-bare` repo is automatically
served at `/git/index` by the HTTP backend.

--- a/.env.sample
+++ b/.env.sample
@@ -25,11 +25,10 @@ export TEST_DATABASE_URL=
 # not needed if the S3 bucket is in US standard
 # export S3_REGION=
 
-# Remote and local locations of the registry index. You can leave these to
-# use a `tmp` subdirectory of the working directory, which is what the
-# script in `./script/init-local-index.sh` will set up for you.
+# Upstream location of the registry index. Background jobs will push to
+# this URL. The default points to a local index for development.
+# Run `./script/init-local-index.sh` to initialize this repo.
 export GIT_REPO_URL=file://$PWD/tmp/index-bare
-export GIT_REPO_CHECKOUT=./tmp/index-co
 
 # Credentials for talking to github. You can leave these blank if you're
 # not logging into your crates.io instance.
