--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "fastboot-app-server": "^2.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pretty-bytes": "^5.3.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
