--- a/src/s3/Cargo.toml
+++ b/src/s3/Cargo.toml
@@ -16,5 +16,6 @@ path = "lib.rs"
 [dependencies]
 base64 = "0.12"
 chrono = "0.4"
-openssl = "0.10.13"
+sha-1 = "0.9"
+hmac = "0.8"
 reqwest = { version = "0.10", features = ["blocking"] }
