Adjust renovatebot config

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,32 @@
 {
-  "extends": [
-    "config:base"
-  ]
+    "extends": [
+        "config:js-app",
+        ":dependencyDashboard",
+        ":maintainLockFilesWeekly",
+        ":prConcurrentLimitNone",
+        ":prHourlyLimitNone",
+        ":semanticCommitsDisabled"
+    ],
+    "docker": {
+        "enabled": false
+    },
+    "rust": {
+        "enabled": false
+    },
+    "postUpdateOptions": ["npmDedupe"],
+    "packageRules": [{
+        "groupName": "embroider",
+        "packagePatterns": [
+            "^@embroider/"
+        ]
+    }, {
+        "groupName": "glimmer",
+        "packagePatterns": [
+            "@glimmer/component",
+            "@glimmer/tracking"
+        ]
+    }, {
+        "packageNames": ["ember-cli", "ember-data", "ember-source"],
+        "separateMinorPatch": true
+    }]
 }
